--- a/Day27/vd1.html
+++ b/Day27/vd1.html
@@ -1,1 +1,21 @@
-<h1>Lời cảm ơn</h1>
+<html>
+    <head>
+        <meta charset="utf-8">
+    </head>
+
+    <body>
+        <h1 style="text-align: center;">Lời cảm ơn</h1>
+        <p>Theo bản tin thời sự trưa của VTV, tại cuộc hội kiến sáng nay, 25/8, thay mặt nhà nước và nhân dân Việt Nam, Chủ tịch nước Nguyễn Xuân Phúc chào mừng Phó tổng thống Mỹ Kalama Harris, cũng là nữ lãnh đạo Mỹ gốc Á và gốc Phi đầu tiên thăm Việt Nam.</p>
+
+        <h2>Chương I: Giới thiệu đơn vị thực tập</h2>
+        <h3>I.1 Thông tin đơn vị thực tập</h3>
+        <p>Chủ tịch nước Nguyễn Xuân Phúc khẳng định, Việt Nam nhất quán thực hiện chính sách đối ngoại độc lập, tự chủ và sẵn sàng là đối tác tin cậy, đóng góp tích cực vào hòa bình, ổn định và phát triển khu vực cũng như trên thế giới.</p>
+        <p>Trên cơ sở đó, Việt Nam luôn coi Mỹ là một trong những thay đổi quan trọng hàng đầu và mong muốn cùng Mỹ tiếp tục tăng cường quan hệ đối tác toàn diện ngày càng đi vào chiều sâu, hiệu quả, vững chắc, cùng có lợi, trên nguyên tắc tôn trọng độc lập, chủ quyền, toàn lãnh thổ, thể chế của nhau.</p>
+        <p>Chủ tịch nước Nguyễn Xuân Phúc cũng cảm ơn Tổng thống Mỹ Joe Biden, Chính phủ và nhân dân Mỹ đã viện trợ 5 triệu liều vắc xin phòng Covid-19 cho Việt Nam thông qua cơ chế COVAX. Chủ tịch nước đánh giá, đây là sự hỗ trợ quý báu mà Mỹ dành cho Việt Nam trong bối cảnh đại dịch Covid-19 đang diễn ra phức tạp như hiện nay.</p>
+
+        <h3>I.2 Thông tin công ty sinh viên đang thực tập</h3>
+        <p>Sau cuộc hội kiến với Chủ tịch nước Nguyễn Xuân Phúc, trưa 25/8, Phó Tổng thống Mỹ gặp gỡ, làm việc với Thủ tướng Phạm Minh Chính.</p>
+        <p>Đón Phó Tổng thống Kamala Harris, Thủ tướng Phạm Minh Chính giới thiệu với Phó Tổng thống Mỹ những hình ảnh đẹp về đất nước, con người Việt Nam.</p>
+        <p>Như thông tin trước đó, tại cuộc làm việc này, Phó Tổng thống Mỹ thông báo với Thủ tướng Phạm Minh Chính việc Mỹ dành tặng Việt Nam một triệu liều vắc xin Pfizer để phòng chống dịch Covid-19. </p>
+    </body>
+</html>
