--- a/Day27/vd3.html
+++ b/Day27/vd3.html
@@ -15,8 +15,18 @@
         <p>"Khi có chuyến bay về, Viện Vệ sinh dịch tễ cứ qua lấy hàng từ sân bay Tân Sơn Nhất, chúng tôi thông quan ngay khi có hàng về, thậm chí cả ban đêm", ông Trường cho biết.</p>
         
         <p>
-            <img src='https://icdn.dantri.com.vn/thumb_w/660/2021/08/25/pfizer-1-1629871967409.jpg'>
+            <img width="100%" src='https://icdn.dantri.com.vn/thumb_w/660/2021/08/25/pfizer-1-1629871967409.jpg'>
             <div>Hai Cục Hải quan TPHCM và Hải quan Hà Nội khẳng định thông quan ngay khi có vắc xin về nước (ảnh Reuters).</div>
         </p>
+
+        <p>Theo đại diện Cục Hải quan TPHCM, thông thường các lô vắc xin khi đã có đủ giấy tờ sẽ được thông quan ngay. Các trường hợp nào thiếu giấy tờ, Hải quan TPHCM đều cho nợ trong vòng 30 ngày.</p>
+        <p>"Chúng tôi thường phải phối hợp trước với các đơn vị nhập vắc xin diện viện trợ hoặc mua về. Thậm chí doanh nghiệp còn không kịp ra lấy hàng, thủ tục không vướng được chứ không nói đến chuyện chậm thông quan ảnh hưởng đến lưu trữ vắc xin", ông Trường cho hay.</p>
+        <p>Theo đại diện Cục Hải quan TPHCM, hiện vẫn chưa có thông tin bao giờ những lô hàng trong 31 triệu liều được nhập về Việt Nam, mới chỉ có thông tin bước đầu là sẽ có 10 triệu liều về trong tháng 8 và tháng 9/2021.</p>
+
+        <b>Hải quan Hà Nội: Có trường hợp không kịp ra lấy</b>
+        <p>Cũng trao đổi với phóng viên Dân trí về việc thông quan nhanh các lô vắc xin về Việt Nam, ông Hoàng Quốc Quang, Phó Cục trưởng, Cục Hải quan Hà Nội khẳng định: Trước đây Viện Vệ sinh dịch tễ về từ vài trăm đến triệu liều, hải quan Hà Nội đã thông quan nhanh khi vắc xin về theo tinh thần chỉ đạo và việc cấp bách chống dịch. Vừa qua, lãnh đạo Tổng cục Hải quan, Bộ Tài chính cũng có chỉ đạo toàn ngành thông quan ngay các lô vắc xin về Việt Nam.</p>
+        <p>"Chúng tôi quán triệt, lập cả tổ công tác về giải quyết vướng mắc nhập khẩu thiết bị y tế phòng chống dịch từ năm trước. Nếu hàng về đêm, hải quan cũng chủ động thông quan ngay", ông Quang nhấn mạnh.</p>
+        
+        <p style="text-align: right;"><b>Nguyễn Tuyền</b></p>
     </body>
 </html>
