--- a/Day27/vd4.html
+++ b/Day27/vd4.html
@@ -4,23 +4,29 @@
     </head>
 
     <body>
-        <table>
+        <table border="1">
             <thead>
                 <tr>
                     <th>Tên</th>
+                    <th>Ngày sinh</th>
                     <th>SĐT</th>
+                    <th>Địa chỉ</th>
                 </tr>
             </thead>
 
             <tbody>
                 <tr>
                     <td>Khách Hàng 1</td>
+                    <td>01/01/2000</td>
                     <td>09432423432</td>
+                    <td>Hà Nội</td>
                 </tr>
                 
                 <tr>
                     <td>Khách Hàng 2</td>
+                    <td>02/02/2001</td>
                     <td>0324324325</td>
+                    <td>TP.HCM</td>
                 </tr>
             </tbody>
         </table>
