--- a/Day27/vd5.html
+++ b/Day27/vd5.html
@@ -12,5 +12,25 @@
             <label style="display:inline-block; min-width: 100px;" for='email'>Email:</label>
             <input name='email'>
         </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for='phone'>Số điện thoại:</label>
+            <input name='phone'>
+        </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for='birth_date'>Ngày sinh:</label>
+            <input name='birth_date'>
+        </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for='gender'>Giới tính:</label>
+            <select style="width:150px">
+                <option>------</option>
+                <option>Nam</option>
+                <option>Nữ</option>
+            </select>
+        </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for='image'>Ảnh đại diện:</label>
+            <input name='image' type='file'>
+        </div>
     </body>
 </html>
