--- a/Day27/lt2.html
+++ b/Day27/lt2.html
@@ -4,7 +4,21 @@
     </head>
 
     <body>
-        
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for="name">Tên:</label>
+            <input name='name'>
+        </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for="desc">Mô tả:</label>
+            <textarea name='desc'></textarea>
+        </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for="price">Đơn giá:</label>
+            <input name='price' min='0' type="number" step="1000">
+        </div>
+        <div>
+            <label style="display:inline-block; min-width: 100px;" for="image">Ảnh:</label>
+            <input name='image' type='file'>
+        </div>
     </body>
-    
 </html>
