--- a/Day28/vd1.html
+++ b/Day28/vd1.html
@@ -14,11 +14,23 @@
       font-size: 17px;
       font-family: "Noto Serif",serif;
     }
+    p{
+      line-height: 1.6;
+    }
     .logo {
       background-color: green;
       color: white;
       padding: 2px 6px; /* py px | p-top p-right p-bottom p-left */
       border-radius: 2px;
+    }
+    .img-content {
+      width: 100%;
+    }
+    .legend{
+      background-color: #F0F0F0;
+      padding: 8px 6px;
+      font-size: 15px;
+      font-family: sans-serif;
     }
   </style>
 </head>
@@ -33,6 +45,16 @@
     <p>Phân bố các F0 theo chùm ca bệnh: chùm sàng lọc ho sốt (một), chùm F1 của các ca sàng lọc ho sốt cộng đồng (50).</p>
     <p>Thông tin cụ thể 51 ca F0 mới ghi nhận như sau:</p>
     <b>Chùm ho sốt cộng đồng (một ca)</b>
+    <p>Bệnh nhân H.K.N.M., nam, sinh năm 1993, địa chỉ tại Thanh Nhàn, Hai Bà Trưng. Bệnh nhân tham gia trực chốt tại khu vực Trung Tả, Đống Đa. Ngày 21/8, bệnh nhân được lấy mẫu xét nghiệm PCR cho kết quả âm tính. Ngày 26/8, bệnh nhân xuất hiện sốt, ngạt mũi, chảy nước mũi. Ngày 27/8, bệnh nhân ở nhà. Ngày 28/8, bệnh nhân được làm test nhanh dương tính, lấy mẫu xét nghiệm PCR dương tính với SARS-CoV-2.</p>
+    <div>
+      <img class="img-content" src='https://icdn.dantri.com.vn/thumb_w/660/2021/08/29/thanhxuan76511630094088903-1-1630217406709.jpg'>
+      <div class="legend">
+        Người dân chờ lấy mẫu xét nghiệm Covid-19 (Ảnh minh họa).
+      </div>
+    </div>
+    <b>Chùm F1 của các trường hợp ho sốt cộng đồng (50 ca)</b>
+    <p>Các bệnh nhân có địa chỉ tại: Thanh Xuân (29),  Đống Đa (7), Ba Đình (5), Hà Đông (3), Đông Anh (2), Hoàn Kiếm (2), Thanh Trì (một), Hoàng Mai (một).</p>
+    <p>Các bệnh nhân ghi nhận tại Thanh Xuân đều có địa chỉ ở phường Thanh Xuân Trung. Nhiều trường hợp được phát hiện thông qua xét nghiệm sàng lọc khu vực nguy cơ cao.</p>
   </div>
 </body>
 </html>
