--- a/Day28/vd1.html
+++ b/Day28/vd1.html
@@ -28,9 +28,10 @@
     }
     .legend{
       background-color: #F0F0F0;
-      padding: 8px 6px;
+      padding: 12px 6px;
       font-size: 15px;
       font-family: sans-serif;
+      margin-bottom: 10px;
     }
   </style>
 </head>
