--- a/Day28/vd3.html
+++ b/Day28/vd3.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-size: 17px;
-      font-family: "Noto Serif",serif;
+      font-family: sans-serif;
     }
     .container {
       padding-left: 10%;
@@ -18,7 +18,7 @@
       border-collapse: collapse;
     }
     .table td, .table th {
-      padding: 5px 10px;
+      padding: 10px;
       border: 1px solid #DDD;
       text-align: left;
     } 
