--- a/Day29/vd1.html
+++ b/Day29/vd1.html
@@ -2,9 +2,20 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <style>
+            .login-form {
+                width: 400px;
+                padding: 20px;
+                border: 1px solid #DDD;
+                border-radius: 4px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 100px;
+            }
+        </style>
     </head>
     <body>
-        <div class="container mt-3">
+        <div class="login-form">
             <h3 class="mb-3">Đăng nhập</h3>
             <div class="form-group">
                 <label>Tên đăng nhập:</label>
@@ -14,7 +25,7 @@
                 <label>Mật khẩu:</label>
                 <input class="form-control" type="password"/>
             </div>
-            <button class="btn btn-primary">Đăng nhập</button>
+            <button class="mt-4 mb-4 btn-block btn btn-primary">Đăng nhập</button>
         </div>
     </body>
 </html>
