--- a/Day29/vd2.html
+++ b/Day29/vd2.html
@@ -10,6 +10,31 @@
                 <label>Tên sản phẩm:</label>
                 <input class="form-control"/>
             </div>
+
+            <div class="form-group">
+                <label>Mã sản phẩm:</label>
+                <input class="form-control"/>
+            </div>
+
+            <div class="form-group">
+                <label>Nhóm sản phẩm:</label>
+                <input class="form-control"/>
+            </div>
+
+            <div class="form-group">
+                <label>Giá sản phẩm:</label>
+                <input class="form-control"/>
+            </div>
+
+            <div class="form-group">
+                <label>Mô tả sản phẩm:</label>
+                <input class="form-control"/>
+            </div>
+
+            <div class="form-group">
+                <label>Ảnh sản phẩm:</label>
+                <input class="form-control"/>
+            </div>
         </div>
     </body>
 </html>
