--- a/Day29/vd2.html
+++ b/Day29/vd2.html
@@ -6,14 +6,17 @@
     <body>
         <div class="container mt-3">
             <h3 class="mb-3">Thông tin sản phẩm</h3>
-            <div class="form-group">
-                <label>Tên sản phẩm:</label>
-                <input class="form-control"/>
-            </div>
+            
+            <div class="row">
+                <div class="col-6 form-group">
+                    <label>Tên sản phẩm:</label>
+                    <input class="form-control"/>
+                </div>
 
-            <div class="form-group">
-                <label>Mã sản phẩm:</label>
-                <input class="form-control"/>
+                <div class="col-6 form-group">
+                    <label>Mã sản phẩm:</label>
+                    <input class="form-control"/>
+                </div>
             </div>
 
             <div class="form-group">
