--- a/Day29/vd2.html
+++ b/Day29/vd2.html
@@ -19,14 +19,15 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label>Nhóm sản phẩm:</label>
-                <input class="form-control"/>
-            </div>
-
-            <div class="form-group">
-                <label>Giá sản phẩm:</label>
-                <input class="form-control"/>
+            <div class="row">
+                <div class="col-6 form-group">
+                    <label>Nhóm sản phẩm:</label>
+                    <input class="form-control"/>
+                </div>
+                <div class="col-6 form-group">
+                    <label>Giá sản phẩm:</label>
+                    <input class="form-control"/>
+                </div>
             </div>
 
             <div class="form-group">
