--- a/Day29/vd2.html
+++ b/Day29/vd2.html
@@ -22,22 +22,26 @@
             <div class="row">
                 <div class="col-6 form-group">
                     <label>Nhóm sản phẩm:</label>
-                    <input class="form-control"/>
+                    <select class="form-control">
+                        <option>---Chọn nhóm sản phẩm</option>
+                        <option>Nhóm 1</option>
+                        <option>Nhóm 2</option>
+                    </select>
                 </div>
                 <div class="col-6 form-group">
                     <label>Giá sản phẩm:</label>
-                    <input class="form-control"/>
+                    <input class="form-control" type="number" min="0" step="1000"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label>Mô tả sản phẩm:</label>
-                <input class="form-control"/>
+                <textarea class="form-control"></textarea>
             </div>
 
             <div class="form-group">
                 <label>Ảnh sản phẩm:</label>
-                <input class="form-control"/>
+                <input type="file" class="form-control-file"/>
             </div>
         </div>
     </body>
