--- a/Day29/vd3.html
+++ b/Day29/vd3.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     </head>
 
-    <body>
-        <table border="1">
+    <body class="container pt-3">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>Tên</th>
