--- a/Day29/vd4.html
+++ b/Day29/vd4.html
@@ -7,9 +7,25 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-6">
-                    <img src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
+                    <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
                 </div>
-                <div class="col-6">Thong tin chi tiet</div>
+                <div class="col-6 pt-5">
+                    <h4>Acer 001</h4>
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th>Hãng sản xuất:</th>
+                                <td>Acer</td>
+                            </tr>
+                            <tr>
+                                <th>Giá bán:</th>
+                                <td>6.500.000 ₫</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <button class="btn btn-secondary">Quay lại</button>
+                    <button class="btn btn-primary">Đặt mua</button>
+                </div>
             </div>
         </div>
     </body>
