--- a/Day29/vd5.html
+++ b/Day29/vd5.html
@@ -14,31 +14,38 @@
                     </tr>
 
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>Mã sản phẩm:</th>
+                        <td><input class="form-control"/></td>
                     </tr>
 
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>Nhóm sản phẩm:</th>
+                        <td>
+                            <select class="form-control">
+                                <option>---Chọn nhóm sản phẩm</option>
+                                <option>Nhóm 1</option>
+                                <option>Nhóm 2</option>
+                            </select>
+                        </td>
                     </tr>
 
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>Giá sản phẩm:</th>
+                        <td><input class="form-control" type="number" min="0" step="1000"/></td>
                     </tr>
 
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>Mô tả sản phẩm:</th>
+                        <td><textarea class="form-control"></textarea></td>
                     </tr>
-                    
+
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>Ảnh sản phẩm:</th>
+                        <td><input type="file" class="form-control-file"/></td>
                     </tr>
                 </tbody>
             </table>
+            <button class="btn btn-primary">Lưu lại</button>
         </div>
     </body>
 </html>
