--- a/Day29/lt1.html
+++ b/Day29/lt1.html
@@ -8,7 +8,10 @@
             <h3>Đặt mua hàng trực tuyến</h3>
             <table class="table">
                 <tbody>
-                    ...
+                    <tr>
+                        <th>Tên sản phẩm:</th>
+                        <td>Acer 001</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
