--- a/Day29/lt1.html
+++ b/Day29/lt1.html
@@ -1,19 +1,33 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container mt-3">
-            <h3>Đặt mua hàng trực tuyến</h3>
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <th>Tên sản phẩm:</th>
-                        <td>Acer 001</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container mt-3">
+    <h3>Đặt mua hàng trực tuyến</h3>
+    <table class="table">
+      <tbody>
+        <tr>
+          <th>Tên sản phẩm:</th>
+          <td>Acer 001</td>
+        </tr>
+        <tr>
+          <th>Đơn giá:</th>
+          <td>6.500.000 đ</td>
+        </tr>
+        <tr>
+          <th>Số lượng:</th>
+          <td>
+            <input class="form-control" style="width: 50px;" type="number" min="1" value="1">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
+
 </html>
