--- a/Day29/lt1.html
+++ b/Day29/lt1.html
@@ -25,8 +25,27 @@
             <input class="form-control" style="width: 50px;" type="number" min="1" value="1">
           </td>
         </tr>
+        <tr>
+          <th>Họ và tên:</th>
+          <td>
+            <input class="form-control">
+          </td>
+        </tr>
+        <tr>
+          <th>Điện thoại:</th>
+          <td>
+            <input class="form-control">
+          </td>
+        </tr>
+        <tr>
+          <th>Địa chỉ:</th>
+          <td>
+            <input class="form-control">
+          </td>
+        </tr>
       </tbody>
     </table>
+    <button class="btn btn-primary">Đặt mua</button>
   </div>
 </body>
 
