--- a/Day29/lt1.html
+++ b/Day29/lt1.html
@@ -11,38 +11,47 @@
     <h3>Đặt mua hàng trực tuyến</h3>
     <table class="table">
       <tbody>
+        <tr><th colspan="2"><h4>Thông tin sản phẩm</h4></th></tr>
         <tr>
           <th>Tên sản phẩm:</th>
           <td>Acer 001</td>
         </tr>
+
         <tr>
           <th>Đơn giá:</th>
           <td>6.500.000 đ</td>
         </tr>
+
         <tr>
           <th>Số lượng:</th>
           <td>
             <input class="form-control" style="width: 50px;" type="number" min="1" value="1">
           </td>
         </tr>
+
+        <tr><th colspan="2"><h4>Thông tin người mua hàng</h4></th></tr>
+
         <tr>
           <th>Họ và tên:</th>
           <td>
             <input class="form-control">
           </td>
         </tr>
+
         <tr>
           <th>Điện thoại:</th>
           <td>
             <input class="form-control">
           </td>
         </tr>
+
         <tr>
           <th>Địa chỉ:</th>
           <td>
             <input class="form-control">
           </td>
         </tr>
+        
       </tbody>
     </table>
     <button class="btn btn-primary">Đặt mua</button>
