--- a/Day29/lt2.html
+++ b/Day29/lt2.html
@@ -9,11 +9,21 @@
 <body>
   <div class="container mt-3">
     <div class="row">
-      <div class="col-3">
+      <div class="col-3" style="border:1px solid #DDD">
         Search Panel
       </div>
-      <div class="col-9">
-        Product Grid
+      <div class="col-9" style="border:1px solid #DDD">
+        <div class="row">
+          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+        </div>
       </div>
     </div>
   </div>
