--- a/Day29/lt2.html
+++ b/Day29/lt2.html
@@ -14,8 +14,22 @@
       </div>
       <div class="col-9" style="border:1px solid #DDD">
         <div class="row">
-          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
-          <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
+          <div class="col-4">
+            <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
+            <div>
+              <p class="mb-1">Acer 001</p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
+            <div>
+              <p class="mb-1">Acer 001</p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+            </div>
+          </div>
+
           <div class="col-4"><img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/></div>
         </div>
 
