--- a/Day29/lt2.html
+++ b/Day29/lt2.html
@@ -7,18 +7,37 @@
 </head>
 
 <body>
-  <div class="container mt-3">
+  <div class="container mt-5">
     <div class="row">
-      <div class="col-3" style="border:1px solid #DDD">
-        Search Panel
+      <div class="col-3" style="border:1px solid #DDD; border-radius: 4px;">
+        <div class="form-group mt-4">
+          <label><b>Tên sản phẩm:</b></label>
+          <input class="form-control" placeholder="Nhập tên sản phẩm cần tìm"/>
+        </div>
+
+        <div class="form-group">
+          <label><b>Hãng sản xuất:</b></label>
+          <p class="mb-2"> <input type="radio" name="categoryId"> Tất cả </p>
+          <p class="mb-2"> <input type="radio" name="categoryId"> Acer </p>
+          <p class="mb-2"> <input type="radio" name="categoryId"> Asus </p>
+          <p class="mb-2"> <input type="radio" name="categoryId"> Lenovo </p>
+        </div>
+
+        <div class="form-group">
+          <label><b>Mức giá:</b></label>
+          <p class="mb-2"> <input type="radio" name="priceRangeId"> Tất cả </p>
+          <p class="mb-2"> <input type="radio" name="priceRangeId"> Dưới 10 triệu </p>
+          <p class="mb-2"> <input type="radio" name="priceRangeId"> Từ 10-20 triệu </p>
+          <p class="mb-2"> <input type="radio" name="priceRangeId"> Trên 20 triệu </p>
+        </div>
       </div>
-      <div class="col-9" style="border:1px solid #DDD">
+      <div class="col-9">
         <div class="row">
           <div class="col-4" style="padding-bottom: 50px;">
             <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
             <div style="position: absolute;bottom: 0;">
               <p class="mb-1">Acer 001</p>
-              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
             </div>
           </div>
 
@@ -26,7 +45,7 @@
             <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
             <div style="position: absolute;bottom: 0;">
               <p class="mb-1">Acer 001</p>
-              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
             </div>
           </div>
 
@@ -34,7 +53,7 @@
             <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
             <div style="position: absolute;bottom: 0;">
               <p class="mb-1">Acer 001</p>
-              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
             </div>
           </div>
         </div>
@@ -44,7 +63,7 @@
             <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
             <div style="position: absolute;bottom: 0;">
               <p class="mb-1">Acer 001</p>
-              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
             </div>
           </div>
 
@@ -52,7 +71,7 @@
             <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
             <div style="position: absolute;bottom: 0;">
               <p class="mb-1">Acer 001</p>
-              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
             </div>
           </div>
 
@@ -60,7 +79,7 @@
             <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
             <div style="position: absolute;bottom: 0;">
               <p class="mb-1">Acer 001</p>
-              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000đ</b> </p>
+              <p class="mb-1"><i style="font-size: 14px;">Giá bán :</i> <b>6.500.000 ₫</b> </p>
             </div>
           </div>
         </div>
