--- a/themes/thank_you.html
+++ b/themes/thank_you.html
@@ -9,6 +9,6 @@
 <body>
   <div class="container mt-3">
     <p>Cảm ơn bạn đã mua sản phẩm của chúng tôi. Chúng tôi sẽ chuyển sản phẩm cho bạn trong thời gian 24h</p>
-    <button class="btn btn-primary">Tiếp tục mua hàng</button>
+    <a href="index.html" class="btn btn-primary">Tiếp tục mua hàng</a>
 </body>
 </html>
