--- a/themes/product_order.html
+++ b/themes/product_order.html
@@ -54,7 +54,7 @@
         
       </tbody>
     </table>
-    <button class="btn btn-primary">Đặt mua</button>
+    <a href='thank_you.html' class="btn btn-primary">Đặt mua</a>
   </div>
 </body>
 
