--- a/Day31/vd3.html
+++ b/Day31/vd3.html
@@ -18,7 +18,7 @@
                 </tr>
             </tbody>
         </table>
-        <button onclick='checkBmi()'>Tính tiền</button>
+        <button onclick='calcTotal()'>Tính tiền</button>
         <span id='total'></span>
     </body>
 </html>
