--- a/Day31/vd3.html
+++ b/Day31/vd3.html
@@ -2,7 +2,14 @@
     <head>
         <meta charset="utf-8">
         <script>
-            
+            function calcTotal() {
+                var priceUnitInput = document.getElementById('priceUnit');
+                var priceUnit = priceUnitInput.value;
+                // var qtyInput = ...;
+                // var qty = ...;
+                // var total = ...;
+                // document.getElementById('total').innerHTML = ...;
+            }
         </script>
     </head>
     <body>
