--- a/Day31/vd3.html
+++ b/Day31/vd3.html
@@ -5,6 +5,7 @@
             function calcTotal() {
                 var priceUnitInput = document.getElementById('priceUnit');
                 var priceUnit = priceUnitInput.value;
+                console.log('priceUnit=', priceUnit);
                 // var qtyInput = ...;
                 // var qty = ...;
                 // var total = ...;
