--- a/Day31/vd3.html
+++ b/Day31/vd3.html
@@ -6,8 +6,9 @@
                 var priceUnitInput = document.getElementById('priceUnit');
                 var priceUnit = priceUnitInput.value;
                 console.log('priceUnit=', priceUnit);
-                // var qtyInput = ...;
-                // var qty = ...;
+                var qtyInput = document.getElementById('qty');
+                var qty = qtyInput.value;
+                console.log('qty=', qty);
                 // var total = ...;
                 // document.getElementById('total').innerHTML = ...;
             }
