--- a/Day31/vd4.html
+++ b/Day31/vd4.html
@@ -18,19 +18,19 @@
                     <td>Thẻ nhớ SamSung 4GB</td>
                     <td>32.000 đ</td>
                     <td>
-                        <input value="2" 
+                        <input id="qty1" value="2" onchange="updateSubTotal1()"
                             style="width:30px" type="number" min="1">
                     </td>
-                    <td>64.000 đ</td>
+                    <td id="subTotal1">64.000 đ</td>
                 </tr>
                 <tr>
                     <td>Đầu đọc thẻ nhớ đa năng</td>
                     <td>8.000 đ</td>
                     <td>
-                        <input value="1" 
+                        <input id="qty2" value="1" onchange="updateSubTotal2()"
                             style="width:30px" type="number" min="1">
                     </td>
-                    <td>8.000 đ</td>
+                    <td id="subTotal2">8.000 đ</td>
                 </tr>
             </tbody>
         </table>
