--- a/Day31/vd4.html
+++ b/Day31/vd4.html
@@ -1,6 +1,14 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <script>
+            function updateSubTotal1() {
+
+            }
+            function updateSubTotal2() {
+                
+            }
+        </script>
     </head>
 
     <body>
