--- a/Day31/vd4.html
+++ b/Day31/vd4.html
@@ -3,10 +3,17 @@
         <meta charset="utf-8">
         <script>
             function updateSubTotal1() {
-
+                var qty1Input = document.getElementById('qty1');
+                var qty1 = qty1Input.value;
+                var subTotal1 = 32000*qty1;
+                document.getElementById('...').value = ...;
             }
+
             function updateSubTotal2() {
-                
+                var qty2Input = document.getElementById('qty2');
+                var qty2 = qty2Input.value;
+                var subTotal2 = 8000*qty2;
+                document.getElementById('...').value = ...;
             }
         </script>
     </head>
