--- a/Day31/vd4.html
+++ b/Day31/vd4.html
@@ -6,14 +6,14 @@
                 var qty1Input = document.getElementById('qty1');
                 var qty1 = qty1Input.value;
                 var subTotal1 = 32000*qty1;
-                document.getElementById('...').value = ...;
+                document.getElementById('subTotal1').innerHTML = subTotal1 + ' đ';
             }
 
             function updateSubTotal2() {
                 var qty2Input = document.getElementById('qty2');
                 var qty2 = qty2Input.value;
                 var subTotal2 = 8000*qty2;
-                document.getElementById('...').value = ...;
+                document.getElementById('subTotal2').innerHTML = subTotal2 + ' đ';
             }
         </script>
     </head>
