--- a/Day32/vd1.html
+++ b/Day32/vd1.html
@@ -11,7 +11,9 @@
         var response = await fetch(url);
         var result = await response.json();
         console.log(result);
+        console.log('Nhiệt độ hiện tại:', result['main']['temp']);
+        document.getElementById('app').innerHTML = 'Nhiệt độ hiện tại:' + result['main']['temp'];
     }
-    
+
     getData();
 </script>
