--- a/Day32/vd2.html
+++ b/Day32/vd2.html
@@ -4,12 +4,19 @@
     <div class="row">
         <div class="col-6 form-group">
             <label>Nội dung cần dịch (vi):</label>
-            <textarea class="form-control"></textarea>
+            <textarea id="source" rows="5" class="form-control"></textarea>
         </div>
         <div class="col-6 form-group">
             <label>Kết quả (en):</label>
-            <textarea class="form-control"></textarea>
+            <textarea id="dest" rows="5" class="form-control"></textarea>
         </div>
     </div>
-    <button class="btn btn-primary">Dịch</button>
+    <button onclick="btnClick()" class="btn btn-primary">Dịch</button>
 </div>
+
+<script>
+    function btnClick() {
+        var sourceText = document.getElementById('source').value;
+        document.getElementById('dest').value = sourceText;
+    }
+</script>
