--- a/Day32/vd3.html
+++ b/Day32/vd3.html
@@ -1,7 +1,31 @@
 <meta charset="utf-8">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <div id="app"></div>
 
 <script>
+    function render(data) {
+        return (`
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Thời gian</th>
+                        <th>Nhiệt độ</th>
+                        <th>Áp suất</th>
+                        <th>Độ ẩm</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>19:00:00</td>
+                        <td>27</td>
+                        <td>1.01</td>
+                        <td>94</td>
+                    </tr>
+                </tbody>
+            </table>
+        `)
+    }
+
     async function getData() {
         var url = 'http://api.openweathermap.org/data/2.5/forecast?id=1581129&units=metric&appid=d6477696b63c2e661af64eead58c11d9&cnt=8';
         var response = await fetch(url);
