--- a/Day32/vd3.html
+++ b/Day32/vd3.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-<div id="app"></div>
+<div id="app" class="container mt-3"></div>
 
 <script>
     function render(data) {
