--- a/Day32/vd3.html
+++ b/Day32/vd3.html
@@ -26,7 +26,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    ${renderRow(data[0])}
+                    ${data.map(item => renderRow(item)).join('')}
                 </tbody>
             </table>
         `)
