--- a/Day32/backend/vd4.html
+++ b/Day32/backend/vd4.html
@@ -4,6 +4,16 @@
 <div id="app" class="mt-3 container"></div>
 
 <script>
+    function renderRow(row) {
+        return(`
+            <tr>
+                <td>${row.code}</td>
+                <td>${row.name}</td>
+                <td>${row.price} đ</td>
+            </tr>
+        `)
+    }
+
     function renderTable(rows) {
         return (`
             <table class="table table-bordered">
@@ -16,11 +26,7 @@
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>IPX</td>
-                        <td>IPhone X</td>
-                        <td>10500000đ</td>
-                    </tr>
+                    ${rows.map(row => renderRow(row)).join('')}
                 </tobdy>
             </table>
         `)
