--- a/Day32/backend/vd4.html
+++ b/Day32/backend/vd4.html
@@ -1,6 +1,13 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+<input 
+    class="mb-3 form-control" 
+    id="keyword" 
+    onkeyup="search()" 
+    placeholder='Nhập tên sản phẩm để tìm'
+/>
+
 <div id="app" class="mt-3 container"></div>
 
 <script>
@@ -16,13 +23,6 @@
 
     function renderTable(rows) {
         return (`
-            <input 
-                class="mb-3 form-control" 
-                id="keyword" 
-                onkeyup="search()" 
-                placeholder='Nhập tên sản phẩm để tìm'
-            />
-
             <table class="table table-bordered">
                 <thead>
                     <tr>
@@ -31,15 +31,14 @@
                         <th>Giá sản phẩm</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     ${rows.map(row => renderRow(row)).join('')}
                 </tobdy>
             </table>
         `)
     }
-    async function getData() {
-        var url = 'http://127.0.0.1:8000/api/search-product';
+    async function getData(keyword) {
+        var url = 'http://127.0.0.1:8000/api/search-product?keyword=' + (keyword??'');
         var response = await fetch(url);
         var result = await response.json();
         console.log(result);
@@ -48,7 +47,7 @@
 
     function search() {
         var keyword = document.getElementById('keyword').value;
-        alert(keyword);
+        getData(keyword);
     }
 
     getData();
