--- a/Day32/backend/vd4.html
+++ b/Day32/backend/vd4.html
@@ -1,14 +1,17 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-<input 
-    class="mb-3 form-control" 
-    id="keyword" 
-    onkeyup="search()" 
-    placeholder='Nhập tên sản phẩm để tìm'
-/>
 
-<div id="app" class="mt-3 container"></div>
+
+<div class="mt-3 container">
+    <input 
+        class="mb-3 form-control" 
+        id="keyword" 
+        onkeyup="search()" 
+        placeholder='Nhập tên sản phẩm để tìm'
+    />
+    <div id="app"></div>
+</div>
 
 <script>
     function renderRow(row) {
