--- a/Day32/backend/vd5.html
+++ b/Day32/backend/vd5.html
@@ -7,18 +7,19 @@
     <tbody>
       <tr>
         <th style="width:30%">Mã sản phẩm:</th>
-        <td> <input class="form-control"> </td>
+        <td> <input name="code" class="form-control"> </td>
       </tr>
       <tr>
         <th style="width:30%">Tên sản phẩm:</th>
-        <td> <input class="form-control"> </td>
+        <td> <input name="name" class="form-control"> </td>
       </tr>
       <tr>
         <th style="width:30%">Giá sản phẩm:</th>
         <td> 
-          <input type="number" min="0" class="form-control"> 
+          <input name="price" type="number" min="0" class="form-control"> 
         </td>
       </tr>
     </tbody>
   </table>
+  <button class="btn btn-primary" onclick="saveProduct()">Lưu lại</button>
 </div>
