--- a/Day32/backend/vd5.html
+++ b/Day32/backend/vd5.html
@@ -3,6 +3,7 @@
   integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 <div class="mt-3 container">
+  <h3 class="mb-3">Thêm mới sản phẩm</h3>
   <table class="table">
     <tbody>
       <tr>
