--- a/Day32/backend/vd5.html
+++ b/Day32/backend/vd5.html
@@ -4,23 +4,30 @@
 
 <div class="mt-3 container">
   <h3 class="mb-3">Thêm mới sản phẩm</h3>
-  <table class="table">
-    <tbody>
-      <tr>
-        <th style="width:30%">Mã sản phẩm:</th>
-        <td> <input name="code" class="form-control"> </td>
-      </tr>
-      <tr>
-        <th style="width:30%">Tên sản phẩm:</th>
-        <td> <input name="name" class="form-control"> </td>
-      </tr>
-      <tr>
-        <th style="width:30%">Giá sản phẩm:</th>
-        <td> 
-          <input name="price" type="number" min="0" class="form-control"> 
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <button class="btn btn-primary" onclick="saveProduct()">Lưu lại</button>
+  <form id="fmt">
+    <table class="table">
+      <tbody>
+        <tr>
+          <th style="width:30%">Mã sản phẩm:</th>
+          <td> <input name="code" class="form-control"> </td>
+        </tr>
+        <tr>
+          <th style="width:30%">Tên sản phẩm:</th>
+          <td> <input name="name" class="form-control"> </td>
+        </tr>
+        <tr>
+          <th style="width:30%">Giá sản phẩm:</th>
+          <td> 
+            <input name="price" type="number" min="0" class="form-control"> 
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <button class="btn btn-primary" onclick="saveProduct()">Lưu lại</button>
+  </form>
 </div>
+<script>
+  async function saveProduct() {
+
+  }
+</script>
