--- a/Day32/backend/vd4.html
+++ b/Day32/backend/vd4.html
@@ -11,6 +11,7 @@
         placeholder='Nhập tên sản phẩm để tìm'
     />
     <div id="app"></div>
+    <a class="btn btn-primary" href='vd5.html'>Thêm sản phẩm</a>
 </div>
 
 <script>
