--- a/Day35/vd1.html
+++ b/Day35/vd1.html
@@ -2,15 +2,14 @@
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
 <div id="app">
-    <!--content-->
-    Xin chào {{name}}
+    Xin chào {{user?.name}}
 </div>
 
 <script>
     new Vue({
         el: '#app',
         data: {
-            name: 'Nguyen Van A'
+            user: {name: 'Nguyen Van A'}
         }
     });
 </script>
