--- a/Day35/vd3.html
+++ b/Day35/vd3.html
@@ -1,14 +1,18 @@
 <meta charset="UTF-8">
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
-<div id="app"></div>
+<div id="app">
+    <ul>
+        <li v-for="customer in customerList">{{customer.name}}</li>
+    </ul>
+</div>
 
 <script>
     new Vue({
         el: '#app',
         data: {
             customerList : [
-                {name: 'Nguyen Van A', phone: '012323123', address: 'Ha Noi'},
+                {name: 'Nguyen Van An', phone: '012323123', address: 'Ha Noi'},
                 {name: 'Nguyen Van B', phone: '012323124', address: 'TP.HCM'},
                 {name: 'Nguyen Van C', phone: '012323125', address: 'Da Nang'},
             ]
