--- a/Day35/vd3.html
+++ b/Day35/vd3.html
@@ -1,10 +1,11 @@
 <meta charset="UTF-8">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
 <div id="app">
-    <ul>
+    <!--<ul>
         <li v-for="customer in customerList">{{customer.name}}</li>
-    </ul>
+    </ul>-->
 </div>
 
 <script>
