--- a/Day35/vd4.html
+++ b/Day35/vd4.html
@@ -14,7 +14,7 @@
             </tr>
         </tbody>
     </table>
-    <button>Tính tiền</button>
+    <button @click="total=price*qty">Tính tiền</button>
     <label>Số tiền : {{total}}</label>
 </div>
 
