--- a/Day35/vd5.html
+++ b/Day35/vd5.html
@@ -13,6 +13,13 @@
                 </tr>
             </thead>
         </thead>
+        <tbody>
+            <tr v-for="product in productList">
+                <td>{{product.name}}</td>
+                <td> <input class="form-control" type="number" min="1"> </td>
+                <td></td>
+            </tr>
+        </tbody>
     </table>
 </div>
 
