--- a/Day35/vd5.html
+++ b/Day35/vd5.html
@@ -27,6 +27,7 @@
     new Vue({
         el: '#app',
         data: {
+            qtyList: [1, 1],
             productList: [
                 {id: 1, name: 'Thẻ nhớ SamSung 4GB', price: 32000},
                 {id: 2, name: 'Đầu đọc thẻ nhớ', price: 8000},
