--- a/Day35/vd5.html
+++ b/Day35/vd5.html
@@ -15,8 +15,8 @@
         </thead>
         <tbody>
             <tr v-for="(product, index) in productList">
-                <td>{{product.name}}</td>
-                <td> <input class="form-control" type="number" min="1"> </td>
+                <td>{{index+1}}. {{product.name}}</td>
+                <td> <input v-model="qtyList[index]" class="form-control" type="number" min="1"> </td>
                 <td></td>
             </tr>
         </tbody>
