--- a/Day35/backend/customer_list.html
+++ b/Day35/backend/customer_list.html
@@ -27,11 +27,10 @@
     new Vue({
         el: '#app',
         data: {
-            customerList : [
-                {name: 'Nguyen Van An', phone: '012323123', address: 'Ha Noi'},
-                {name: 'Nguyen Van B', phone: '012323124', address: 'TP.HCM'},
-                {name: 'Nguyen Van C', phone: '012323125', address: 'Da Nang'},
-            ]
+            customerList : []
+        },
+        mounted: async function() {
+            
         }
     })
 </script>
