--- a/Day36/backend/product_detail.html
+++ b/Day36/backend/product_detail.html
@@ -37,7 +37,14 @@
 
   <script>
     new Vue({
-      el: '#app'
+      el: '#app',
+      data: {
+        product:{
+          name: 'Ten SP',
+          category_name: 'Hang SX',
+          price: 10000000
+        }
+      }
     })
   </script>
 </body>
