--- a/Day36/backend/product_detail.html
+++ b/Day36/backend/product_detail.html
@@ -16,16 +16,16 @@
           src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg' />
       </div>
       <div class="col-6 pt-5">
-        <h4>Acer 001</h4>
+        <h4>{{product.name}}</h4>
         <table class="table">
           <tbody>
             <tr>
               <th>Hãng sản xuất:</th>
-              <td>Acer</td>
+              <td>{{product.category_name}}</td>
             </tr>
             <tr>
               <th>Giá bán:</th>
-              <td>6.500.000 ₫</td>
+              <td>{{product.price}} ₫</td>
             </tr>
           </tbody>
         </table>
