--- a/Day36/backend/product_detail.html
+++ b/Day36/backend/product_detail.html
@@ -41,7 +41,11 @@
         product: {}
       },
       mounted: async function() {
-        var url = 'http://127.0.0.1:8000/api/product/1';
+        var href = window.location.toString();
+        var pos = href.indexOf('?id=');
+        var id = href.substring(pos+4);
+        alert(id);
+        var url = 'http://127.0.0.1:8000/api/product/'+id;
         var resp = await fetch(url);
         this.product = await resp.json();
       }
