--- a/Day36/backend/index.html
+++ b/Day36/backend/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 
 <body>
-  <div class="container mt-5">
+  <div id="app" class="container mt-5">
     <div class="row">
       <div class="col-3" style="border:1px solid #DDD; border-radius: 4px;">
         <div class="form-group mt-4">
@@ -46,4 +48,13 @@
       </div>
     </div>
   </div>
+  <script>
+    new Vue({
+      el: '#app',
+      data: {productList:[]},
+      mounted: async function() {
+        //TODO
+      }
+    })
+  </script>
 </body>
