--- a/Day36/backend/index.html
+++ b/Day36/backend/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app" class="container mt-5">
+  <div v-for="product in productList" id="app" class="container mt-5">
     <div class="row">
       <div class="col-3" style="border:1px solid #DDD; border-radius: 4px;">
         <div class="form-group mt-4">
