--- a/Day36/backend/index.html
+++ b/Day36/backend/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div v-for="product in productList" id="app" class="container mt-5">
+  <div id="app" class="container mt-5">
     <div class="row">
       <div class="col-3" style="border:1px solid #DDD; border-radius: 4px;">
         <div class="form-group mt-4">
@@ -35,7 +35,7 @@
       </div>
       <div class="col-9">
         <div class="row">
-          <div class="col-4" style="padding-bottom: 50px;">
+          <div v-for="product in productList" class="col-4" style="padding-bottom: 50px;">
             <a href='product_detail.html'>
               <img width="100%" src='https://raw.githubusercontent.com/pytutorial/themes/master/shop_themes/images/sample.jpg'/>
               <div style="position: absolute;bottom: 0;">
