--- a/Day36/backend/customer_list.html
+++ b/Day36/backend/customer_list.html
@@ -4,6 +4,7 @@
 
 <div id="app" class="container mt-3">
     <h3>Danh sách khách hàng</h3>
+    <input class="form-control" placeholder="Nhập tên khách hàng để tìm">
     <table class="table table-bordered">
         <thead>
             <tr>
