--- a/Day36/backend/customer_list.html
+++ b/Day36/backend/customer_list.html
@@ -4,8 +4,15 @@
 
 <div id="app" class="container mt-3">
     <h3>Danh sách khách hàng</h3>
-    <input class="form-control" placeholder="Nhập tên khách hàng để tìm">
-    <table class="table table-bordered">
+    <div class="row">
+        <div class="col-9">
+            <input class="form-control" placeholder="Nhập tên khách hàng để tìm">
+        </div>
+        <div class="col-3">
+            <button class="btn btn-primary">Tìm kiếm</button>
+        </div>
+    </div>
+    <table class="mt-3 table table-bordered">
         <thead>
             <tr>
                 <th>Họ và tên</th>
