--- a/Day36/backend/customer_list.html
+++ b/Day36/backend/customer_list.html
@@ -35,19 +35,22 @@
     new Vue({
         el: '#app',
         data: {
+            allCustomerList:[],
             customerList : [],
             name: '',
         },
         methods: {
             search: function() {
-                alert(this.name);
+                //alert(this.name);
+                this.customerList = this.allCustomerList.filter(
+                    c => c.name.includes(this.name));
             }
         },
         mounted: async function() {
             var response = await fetch('http://127.0.0.1:8000/api/get-customer-list');
             var result = await response.json();
             console.log(result);
-            this.customerList = result;
+            this.customerList = this.allCustomerList = result;
         }
     })
 </script>
