--- a/Day36/backend/customer_list_2.html
+++ b/Day36/backend/customer_list_2.html
@@ -40,10 +40,11 @@
             name: '',
         },
         methods: {
-            search: function() {
-                //alert(this.name);
-                this.customerList = this.allCustomerList.filter(
-                    c => c.name.includes(this.name));
+            search: async function() {
+                var response = await fetch('http://127.0.0.1:8000/api/get-customer-list?name='+this.name);
+                var result = await response.json();
+                console.log(result);
+                this.customerList = this.allCustomerList = result;
             }
         },
         mounted: async function() {
