--- a/Day36/backend/customer_list_2.html
+++ b/Day36/backend/customer_list_2.html
@@ -48,10 +48,7 @@
             }
         },
         mounted: async function() {
-            var response = await fetch('http://127.0.0.1:8000/api/get-customer-list');
-            var result = await response.json();
-            console.log(result);
-            this.customerList = this.allCustomerList = result;
+            this.search();
         }
     })
 </script>
