--- a/Day36/backend/index.html
+++ b/Day36/backend/index.html
@@ -51,7 +51,10 @@
   <script>
     new Vue({
       el: '#app',
-      data: {productList:[]},
+      data: {
+        productList:[]
+      },
+
       mounted: async function() {
         var url = 'http://127.0.0.1:8000/api/product/';
         var resp = await fetch(url);
