--- a/Day36/backend/index.html
+++ b/Day36/backend/index.html
@@ -14,24 +14,26 @@
       <div class="col-3" style="border:1px solid #DDD; border-radius: 4px;">
         <div class="form-group mt-4">
           <label><b>Tên sản phẩm:</b></label>
-          <input class="form-control" placeholder="Nhập tên sản phẩm cần tìm"/>
+          <input v-model="name" class="form-control" placeholder="Nhập tên sản phẩm cần tìm"/>
         </div>
 
         <div class="form-group">
           <label><b>Hãng sản xuất:</b></label>
-          <p class="mb-2"> <input type="radio" name="categoryId"> Tất cả </p>
-          <p class="mb-2"> <input type="radio" name="categoryId"> Acer </p>
-          <p class="mb-2"> <input type="radio" name="categoryId"> Asus </p>
-          <p class="mb-2"> <input type="radio" name="categoryId"> Lenovo </p>
+          <p class="mb-2"> <input v-model="categoryId" value="" type="radio" name="categoryId"> Tất cả </p>
+          <p class="mb-2"> <input v-model="categoryId" value="1" type="radio" name="categoryId"> Acer </p>
+          <p class="mb-2"> <input v-model="categoryId" value="2" type="radio" name="categoryId"> Asus </p>
+          <p class="mb-2"> <input v-model="categoryId" value="3" type="radio" name="categoryId"> Lenovo </p>
         </div>
 
         <div class="form-group">
-          <label><b>Mức giá:</b></label>
+          <label><b>Mức giá:</b></label> 
           <p class="mb-2"> <input type="radio" name="priceRangeId"> Tất cả </p>
           <p class="mb-2"> <input type="radio" name="priceRangeId"> Dưới 10 triệu </p>
           <p class="mb-2"> <input type="radio" name="priceRangeId"> Từ 10-20 triệu </p>
           <p class="mb-2"> <input type="radio" name="priceRangeId"> Trên 20 triệu </p>
         </div>
+
+        <button class="btn btn-primary mb-4" @click="search">Tìm kiếm</button>
       </div>
       <div class="col-9">
         <div class="row">
@@ -52,7 +54,9 @@
     new Vue({
       el: '#app',
       data: {
-        productList:[]
+        productList:[],
+        name: '',
+        categoryId: ''
       },
 
       mounted: async function() {
