--- a/Day36/backend/customer_paging.html
+++ b/Day36/backend/customer_paging.html
@@ -26,6 +26,13 @@
             </tr>
         </thead>
     </table>
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
 </div>
 
 <script>
